# Modern-WinAPI

./: .gitignore  CMakeLists.txt  README.md
MW/: CMakeCache.txt
ModernWinAPI/Execute/: main.cpp
ModernWinAPI/Src/WinAPI/: loader.ixx  winapi.ixx
